<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:id="@+id/textViewDadosPessoais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:text="@string/cliente_sessao_dados_fornecedor"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="16sp"/>

        <EditText
                android:id="@+id/editTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:hint="Id"
                android:inputType="text"
                android:visibility="gone" />

        <EditText
                android:id="@+id/editTextNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/cliente_nome"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:inputType="text" />

        <EditText
                android:id="@+id/editTextTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/cliente_telefone"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:inputType="text" />

        <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/cliente_email"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:inputType="textEmailAddress" />

        <EditText
                android:id="@+id/editTextCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/cliente_CPF_CNPJ"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:inputType="number" />

        <TextView
                android:id="@+id/textViewEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/cliente_sessao_endereco"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="16sp"/>

        <EditText
                android:id="@+id/editTextEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/cliente_logradouro"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:inputType="text" />

        <EditText
                android:id="@+id/editTextNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/cliente_numero"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:inputType="text" />

        <EditText
                android:id="@+id/editTextComplemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/cliente_complemento"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:inputType="text" />

        <EditText
                android:id="@+id/editTextBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/cliente_bairro"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:inputType="text" />

        <EditText
                android:id="@+id/editTextUf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/cliente_uf"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:inputType="text" />

        <EditText
                android:id="@+id/editTextCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="50dp"
                android:hint="@string/cliente_cidade"
                android:background="@drawable/shape_rectangule_rounded_white"
                android:padding="4dp"
                android:inputType="text" />

    </LinearLayout>

</ScrollView>

