<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.rm.cfv.activities.cliente.CadastrarClienteActivity">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView   android:id="@+id/textViewDadosPessoais"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cliente_sessao_dados_pessoais"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:textAlignment="center"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" />

            <EditText android:id="@+id/editTextNome"
                      android:hint="@string/cliente_nome"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/textViewDadosPessoais"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

            <EditText android:id="@+id/editTextTelefone"
                      android:hint="@string/cliente_telefone"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/editTextNome"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

            <EditText android:id="@+id/editTextEmail"
                      android:hint="@string/cliente_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/editTextTelefone"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

            <EditText android:id="@+id/editTextCPF"
                      android:hint="@string/cliente_CPF"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="number"
                      android:maxLength="11"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

            <EditText android:id="@+id/editTextDataNascimento"
                      android:hint="@string/cliente_dataNascimento"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="date"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/editTextCPF"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

            <TextView   android:id="@+id/textViewEndereco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cliente_sessao_endereco"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:textAlignment="center"
                        app:layout_constraintTop_toBottomOf="@+id/editTextDataNascimento"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" />

            <EditText android:id="@+id/editTextEndereco"
                      android:hint="@string/cliente_logradouro"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/textViewEndereco"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

            <EditText android:id="@+id/editTextNumero"
                      android:hint="@string/cliente_numero"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/editTextEndereco"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

            <EditText android:id="@+id/editTextComplemento"
                      android:hint="@string/cliente_complemento"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/editTextNumero"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

            <EditText android:id="@+id/editTextBairro"
                      android:hint="@string/cliente_bairro"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/editTextComplemento"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

            <EditText android:id="@+id/editTextUf"
                      android:hint="@string/cliente_uf"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/editTextBairro"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

            <EditText android:id="@+id/editTextCidade"
                      android:hint="@string/cliente_cidade"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/editTextUf"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
