<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/primaryColor"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/playstore_icon"
            android:scaleType="centerInside"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:text="@string/nav_header_title"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/textView"
            android:textSize="12sp"
            android:visibility="gone"/>

</LinearLayout>
